<resources>
    <string name="app_name">GameGuardian</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Audio Rec</string>

    <string name="hello_first_fragment">Accelaration：</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="take_photo">Take Photos</string>
    <string name="start_capture">Video rec</string>
    <string name="stop_capture">stop video rec</string>
    <string name="collect_data">Collect Data 15 times</string>
    <string name="front_recording_button">signal</string>
    <string name="predict_string">predict</string>
    <string name="monitor">monitor</string>
    <string name="rotate_view">Rotate View</string>
    <string name="gpt">Gpt</string>
    <string name="user_page">user page</string>
    <string name="developer_page">developer page</string>
    <string name="confirm">确认设置</string>
    <string name="text_monitor_start">开始追踪</string>
    <string name="text_monitor_stop">停止追踪</string>
    <string name="unlock">unlock</string>

</resources>